# jupyterlab-deck

./: .gitignore  .readthedocs.yml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  codecov.yml  dodo.py  lerna.json  package.json  pyproject.toml
.binder/: apt.txt  environment.yml  postBuild
.github/: build-requirements.txt  environment-base.yml  environment-build.yml  environment-docs.yml  environment-lint.yml  environment-robot.yml  environment-test-canary.yml  environment-test-lab35.yml  environment-test.yml  pull_request_template.md  requirements-build.txt  test-environment.yml
.github/ISSUE_TEMPLATE/: bug_report.md  release.md
.github/reqs/: environment-base.yml  environment-build.yml  environment-docs.yml  environment-lint.yml  environment-robot.yml  environment-test.yml
.github/workflows/: badges.yml  ci.yml  pages.yml
_scripts/: labextension.py
atest/fixtures/: Anchors.ipynb  Empty.ipynb  ThreeCells.ipynb  jupyter_config.json  overrides.json  page_config.json
atest/resources/: CodeMirror.resource  Coverage.resource  Deck.resource  DeckSelectors.resource  Design.resource  Docs.resource  Fixtures.resource  Lab.resource  LabSelectors.resource  Notebook.resource  Screenshots.resource  Server.resource  Sidebar.resource
atest/suites/: __init__.robot
atest/suites/lab/: 00-smoke.robot  01-examples.robot  02-interactive.robot  02-keyboard.robot  02-navigate.robot  03-layers.robot  04-design-tools.robot  05-slide-layout.robot  06-slide-type-commands.robot  __init__.robot
atest/suites/nb/: 00-smoke.robot  01-examples.robot  __init__.robot
docs/: conf.py  dictionary.txt  docs-environment.yml  index.md
docs/_static/: theme.css
examples/: History.ipynb  Layers.ipynb  README.ipynb  README.md  hello_world.py  jupyter-lite.json  jupyter_lite_config.json  overrides.json
js/: .eslintrc.js  tsconfigbase.json
js/_meta/: package.json  tsconfig.json
js/_meta/src/: index.ts  tsconfig.json
js/jupyterlab-deck/: .npmignore  LICENSE  README.md  package.json  webpack.config.js
js/jupyterlab-deck/schema/: plugin.json
js/jupyterlab-deck/src/: design.ts  icons.ts  index.ts  labcompat.ts  layover.ts  manager.ts  notebook-button.ts  plugin.ts  remote.tsx  tokens.ts  tsconfig.cov.json  tsconfig.json  utils.ts
js/jupyterlab-deck/src/markdown/: extension.ts  plugin.ts  presenter.ts
js/jupyterlab-deck/src/notebook/: adapter.ts  decktools.tsx  extension.ts  layover.ts  metadata.tsx  plugin.ts  presenter.ts
js/jupyterlab-deck/src/tools/: button.ts  deckDefaults.ts  defaults.ts  design.ts  design.tsx  design2.ts  layover.ts  manager.ts  remote.tsx  selector.ts  styleDefaults.ts
js/jupyterlab-deck/src/tools/base/: button.ts  selector.ts  slider.ts
js/jupyterlab-deck/style/: button.css  decktools.css  design.css  edit.css  flyout.css  index.css  layover.css  markdown.css  notebook.css  remote.css  selector.css  shell.css  slider.css  variables.css
pages-lite/: README.ipynb  jupyter-lite.json  jupyter_lite_config.json  overrides.json
src/jupyterlab_deck/: __init__.py  _version.py
src/jupyterlab_deck/tests/: __init__.py  test_metadata.py
