[build-system]
requires = ["flit_core >=3.7.1,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "jupyterlab-deck"
version = "0.1.0"
authors = [
    {name = "jupyterlab-deck contributors", email = "deathbeds@googlegroups.com"},
]
readme = "README.md"
classifiers = [
    "Framework :: Jupyter :: JupyterLab :: 3",
    "Framework :: Jupyter :: JupyterLab :: Extensions :: Prebuilt",
    "Framework :: Jupyter :: JupyterLab :: Extensions",
    "Framework :: Jupyter :: JupyterLab",
    "Framework :: Jupyter",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3",
]
requires-python = ">=3.7"
dynamic = ["description"]
dependencies = [
    # likely need to pin less tightly
    "jupyterlab >=3,<4",
]

[project.urls]
"Bug Tracker" = "https://github.com/deathbeds/ipydrawio/issues"
"Changelog" = "https://github.com/deathbeds/jupyterlab-deck/blob/main/CHANGELOG.md"
"Documentation" = "https://jupyterlab-deck.rtfd.io"
"Source" = "https://github.com/deathbeds/jupyterlab-deck"

[tool.flit.sdist]
include = ["src/jupyterlab_deck/_d"]

[tool.flit.module]
name = "jupyterlab_deck"

[tool.flit.external-data]
directory = "src/jupyterlab_deck/_d"

[tool.doit]
backend = "sqlite3"
verbosity = 2

[tools.doit.commands.list]
status = true
subtasks = true
