[build-system]
requires = ["flit_core >=3.9.0,<4.0.0"]
build-backend = "flit_core.buildapi"

[project]
name = "jupyterlab-deck"
version = "0.2.0"
authors = [
    {name = "jupyterlab-deck contributors", email = "deathbeds@googlegroups.com"},
]
readme = "README.md"
classifiers = [
    "Framework :: Jupyter :: JupyterLab :: 3",
    "Framework :: Jupyter :: JupyterLab :: 4",
    "Framework :: Jupyter :: JupyterLab :: Extensions :: Prebuilt",
    "Framework :: Jupyter :: JupyterLab :: Extensions",
    "Framework :: Jupyter :: JupyterLab",
    "Framework :: Jupyter",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3",
]
requires-python = ">=3.8"
dynamic = ["description"]
dependencies = [
    "jupyterlab >=3.5,<5.0.0a0",
    "jupyterlab-fonts >=3.0.0"
]

[project.urls]
"Bug Tracker" = "https://github.com/deathbeds/jupyterlab-deck/issues"
"Changelog" = "https://github.com/deathbeds/jupyterlab-deck/blob/main/CHANGELOG.md"
"Documentation" = "https://jupyterlab-deck.rtfd.io"
"Source" = "https://github.com/deathbeds/jupyterlab-deck"

[tool.flit.sdist]
include = ["src/_d"]

[tool.flit.module]
name = "jupyterlab_deck"

[tool.flit.external-data]
directory = "src/_d"

[tool.doit]
backend = "sqlite3"
verbosity = 2

[tool.doit.commands.list]
status = true
subtasks = true

[tool.robocop]
exclude = [
    "deprecated-statement",
    "inline-if-can-be-used",
    "unnecessary-string-conversion",
    "unused-argument",
    "unused-variable",
    "variable-overwritten-before-usage",
]

[tool.ruff]
ignore = [
  "D211",
  "D213",
  # if it doesn't bother black..
  "E501",
  # if it doesn't bother mypy...
  "ANN101",
  "ANN401",
  "PGH003",
  # keep 3.8 compat
  "UP006",
  "UP007",
  # meh
  "N812",
  # format?
  "COM812",
  "ISC001",
]
cache-dir = "build/.cache/ruff"
select = [
  "A",
  "ARG",
  "B",
  "BLE",
  "C4",
  "C90",
  "COM",
  "D",
  "DJ",
  "DTZ",
  "E",
  "EM",
  # "ERA", # causes syntax errors, check later
  "EXE",
  "F",
  "FBT",
  "G",
  "I",
  "ICN",
  "INP",
  "ISC",
  "N",
  "NPY",
  "PD",
  "PGH",
  "PIE",
  "PL",
  "PT",
  "PTH",
  "PYI",
  "Q",
  "RET",
  "RSE",
  "RUF",
  "S",
  "SIM",
  "SLF",
  "T10",
  "T20",
  "TCH",
  "TID",
  "UP",
  "W",
  "YTT",
]
[tool.ruff.per-file-ignores]
"dodo.py" = ["RUF012", "S603", "T201", "BLE001", "D103", "D102", "D101", "S607", "PLR0912", "S320"]
"conf.py" = ["INP001", "A001", "D103", "ARG001", "S603", "S607"]
"**/tests/**/*.py" = ["SLF001", "S101"]
"_scripts/*.py" = ["INP001", "SLF001"]

[tool.ruff.isort]
known-first-party = ["jupyterlab_deck"]
